<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatInterface</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chat_title">Chat</string>
    <string name="prof_pic_desc">Profile Picture</string>
    <string name="send">Send</string>
    <string name="message_hint">Enter Text Here</string>
    <string name="source_title">Source Address</string>
    <string name="street_hint">Enter Street Address Here</string>
    <string name="state_hint">Enter City, State, and ZIP Here</string>
    <string name="dest_title">Destination Address</string>
    <string name="address_button">Address Input</string>

</resources>
