<com.chatinterface.CustomMainView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testmap">

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#ff7d7d7d"
        android:text="@string/send" />

    <EditText
        android:id="@+id/input_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/send_button"
        android:background="#ffffffff"
        android:hint="@string/message_hint"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_above="@id/input_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
    </FrameLayout>

    <Button
        android:id="@+id/slider"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_above="@id/fragment_container"
        android:background="#FF418BF2"
        android:text="@string/chat_title"
        android:textSize="20sp" />

</com.chatinterface.CustomMainView>